syntax = "proto3";

package protobuf.core;

import "core/name.proto";
import "core/attributes.proto";

message NamedAttributes {
  Name name = 1;
  Attributes attributes = 2;
}
